# proton-pulse-web-staging

./: .gitignore  .grype.yaml  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  TODO.md  about.html  admin.css  admin.html  admin.js  app-0682c5714.js  app-115426c79.js  app-1f43241b2.js  app-2ea49be02.js  app-3533f34f7z.js  app-3935dced2.js  app-794ad6193.js  app-7af4afb57.js  app-7d067c42b.js  app-ac6ec1354.js  app-chart-interactions.js  app-e947fa9b0.js  app-f10958e16.js  app-f602a615c.js  app-submit.js  app.css  app.html  app.js  auth.css  auth.html  auth.js  cert-history.json  cert-status.json  confidence.html  coverage-summary.json  coverage.html  data-index.html  data-versions.json  (+49 more)
.github/: dependabot.yml
assets/: steam-login-button-preview.html
badges/: pulse-reports.json
scripts/: analyse_scoring.py  backup-r2-snapshot.sh  backup_supabase.sh  cache-bust.sh  cache_bust.py  cert-monitor.sh  check-cert.sh  deploy-worker.sh  fetch_epic_catalog.py  fetch_gog_catalog.py  gen-icon-pngs.sh  gen-store-icons.sh  install-steamcmd.sh  install_docker.sh  log-cache-stats.sh  persist-chunk-state.sh  preserve-cert-monitor.sh  probe-idempotent-check.sh  probe-plan-emit.sh  publish-cloudflare.sh  renew-github-pages-cert.sh  restore-chunk-state.sh  restore-r2-from-snapshot.sh  restore.py  smoke-test.py  split_reports.py  wait-for-remote.sh
supabase/: config.toml
tests/: aboutFraming.test.js  accountDataOps.test.js  admin-permissions.test.js  adminAllReports.test.js  adminAllReportsSourceLabel.test.js  adminAnalytics.test.js  adminAnalyticsChartConfig.test.js  conftest.py  (+125 more)
(+95246 files in other folders)
