[project]
name = "proton-pulse-web"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.5.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "pyright>=1.1.403",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
]

[tool.uv]
# nosemgrep: generic.ci.security.uv-missing-dependency-cooldown — cooldown configured in .github/dependabot.yml (uv ecosystem entry)
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts/pipeline --cov-fail-under=90"

[tool.pylint.main]
py-version = "3.12"

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "duplicate-code",
    "global-statement",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "subprocess-run-check",
    "too-many-arguments",
    "too-many-branches",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
    "unnecessary-lambda",
    "unused-variable",
]
